Closed Bug 1161640 Opened 11 years ago Closed 11 years ago

|mar_read_entire_file| can leak file descriptor (command line build utility)

Categories

(Toolkit :: Application Update, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: erahm, Assigned: joseriosneto, Mentored)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: [CID 1293422][lang=c++][good first bug])

Attachments

(1 file)

Coverity reports that |mar_read_entire_file| can leak file descriptor |f| if |fseeko| fails [1]. [1] https://hg.mozilla.org/mozilla-central/annotate/754579ec0e68/modules/libmar/verify/mar_verify.c#l38
Summary: |mar_read_entire_file| can leak file descriptor → |mar_read_entire_file| can leak file descriptor (command line build utility)
Mentor: erahm
Whiteboard: [CID 1293422] → [CID 1293422][lang=c++][good first bug]
Hello Eric, can I take this bug?
Flags: needinfo?(erahm)
Hi José, thank you for the interest! The bug is available for you to work on, please let me know if you need help getting started.
Flags: needinfo?(erahm)
Eric, here is a first patch of the solution.
Attachment #8602460 - Flags: review?(erahm)
Comment on attachment 8602460 [details] [diff] [review] bug1161640_moving_fclose.patch Thanks and much appreciated! If you'd like to help out some more there is also bug 1161666 and bug 1161686. I'll land this tonight
Attachment #8602460 - Flags: review?(erahm) → review+
Assignee: nobody → joseriosneto
Flags: in-testsuite-
Target Milestone: --- → mozilla40
Mentor: robert.strong.bugs
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: