Bug 1161640 - |mar_read_entire_file| can leak file descriptor (command line build utility). Close descriptor when fseeko fails. r=rstrong